fixed z-index issues and added all section titles

--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ section {
   justify-content: center;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
 
-.about-me-title {
+.section-title {
   font-size: 2.5rem;
   text-align: center;
   width: 100%;
@@ -112,11 +113,7 @@ section {
   line-height: 135%;
 }
 
-/*
-#contact {
-  min-height: 94vh;
-}
-*/
+
 @media screen and (max-width: 1000px) {
   #landing {
     display: block;
@@ -136,6 +133,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+   
   }
 
   .about-me-section {
